# cinderella

./: Cargo.toml  README.md
cinderella/: Cargo.toml
cinderella-cli/: Cargo.toml
cinderella-cli/src/: main.rs
cinderella-embedded/: Cargo.toml
cinderella-embedded/src/: app.rs  confirm.rs  lib.rs
cinderella/src/: lib.rs
clinderella/: Cargo.toml
clinderella/src/: main.rs
src/: app.rs  confirm.rs  events.rs  lib.rs  value.rs
