[package]
name = "cinderella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.24.0", optional = true }
tui = { version = "0.18", default-features = false }
termion = { version = "1.5.6", optional = true }
cfg-if = "1"
derive_builder = "0.11.2"
[target.'cfg(unix)'.features]
default = ["termion", "tui/termion"]

[target.'cfg(target_os = "windows")'.features]
default = ["crossterm", "dep:crossterm"]

[features]
termion = [ "dep:termion", "tui/termion"]
crossterm = ["dep:crossterm", "tui/crossterm" ]
[workspace]

members = [
    "clinderella",
]
