[package]
name = "cinderella-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"]}
cinderella = { path = "../cinderella" } 

[target.'cfg(windows)'.dependencies]
cinderella-terminal = { path = "../../cinderella-terminal" }

[target.'cfg(unix)'.dependencies]
cinderella-terminal = { path = "../../cinderella-terminal", default-features = false, features = ["termion"]}


